# chatbot_rag_app

./: Dockerfile  README.md  application.py  rag_data_processing.py  requirements.txt
chatbot_embeddings/: application.py  rag_data_processing.py
chatbot_embeddings/notebooks/machine_learning/: Price_Predictor.ipynb
chatbot_embeddings/notebooks/synthetic_data_test/: data_abastores.csv  raw_data.csv
chatbot_solution/: Dockerfile  app.py  app_api.py  docker-compose.yml  pyproject.toml  requirements.txt
chatbot_solution/data/: abastores.db
chatbot_solution/notebooks/: rag_ingestion.ipynb
chatbot_solution/notebooks/.ipynb_checkpoints/: rag_ingestion-checkpoint.ipynb
chatbot_solution/notebooks/chatbot/: Abastores_api.py  rag_ingestion.ipynb
chatbot_solution/notebooks/machine_learning/Abastores_prices_currency_exchange_rates/: EDA_Abastores_currency_exchange_rates.ipynb
chatbot_solution/notebooks/machine_learning/Abastores_prices_weather_data/: EDA(Historical Hourly Weather Data 2012-2017)AGIA.ipynb
chatbot_solution/utils/: openai_chatbot.py  prompts.py
notebooks/machine_learning/: daily_weather_monthly_dummies.csv
notebooks/rag_prototype/: pages_and_chunks.csv  rag.ipynb
notebooks/synthetic_data_test/: text_chunks_and_embeddings_2_option.csv  text_chunks_and_embeddings_df.csv  text_doc_generator.ipynb  text_rag_2.ipynb
notebooks/synthetic_data_test/.ipynb_checkpoints/: text_doc_generator-checkpoint.ipynb
